--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC Source/Engine/Headers)
 target_include_directories(${PROJECT_NAME} PUBLIC Source/API/Headers)
 target_include_directories(${PROJECT_NAME} PUBLIC Source/Editor/Headers)
 target_include_directories(${PROJECT_NAME} PUBLIC Source/Animation/Headers)
+target_include_directories(${PROJECT_NAME} PUBLIC Source/Common)
 target_include_directories(${PROJECT_NAME} PUBLIC ThirdParty/stb)
 target_include_directories(${PROJECT_NAME} PUBLIC include)
 target_include_directories(${PROJECT_NAME} PUBLIC ${GLFW_DIR})  
