--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "ThirdParty/ImGuizmo"]
 	path = ThirdParty/ImGuizmo
 	url = https://github.com/CedricGuillemet/ImGuizmo.git
+[submodule "ThirdParty/doxygen-awesome-css"]
+	path = ThirdParty/doxygen-awesome-css
+	url = https://github.com/jothepro/doxygen-awesome-css.git
