--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,21 +96,21 @@ IncludeDirectories(${PROJECT_NAME})
 file(GLOB ENGINE_TESTS 
 Source/Engine/Tests/*.cpp)
 
-#add google tests
-include(FetchContent)
-FetchContent_Declare(googletest URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip)
+# #add google tests
+# include(FetchContent)
+# FetchContent_Declare(googletest URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip)
 
-# For Windows: Prevent overriding the parent project's compiler/linker settings
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
+# # For Windows: Prevent overriding the parent project's compiler/linker settings
+# set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+# FetchContent_MakeAvailable(googletest)
 
-enable_testing()
-add_executable(ChronosTests ${ENGINE_TESTS} ${CHRONOS_CPP})
-target_link_libraries(
-  ChronosTests
-  GTest::gtest_main
-)
-IncludeDirectories(ChronosTests)
+# enable_testing()
+# add_executable(ChronosTests ${ENGINE_TESTS} ${CHRONOS_CPP})
+# target_link_libraries(
+#   ChronosTests
+#   GTest::gtest_main
+# )
+# IncludeDirectories(ChronosTests)
 
-include(GoogleTest)
-gtest_discover_tests(ChronosTests)
+# include(GoogleTest)
+# gtest_discover_tests(ChronosTests)
