--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt update
+          sudo apt install -y libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev libwayland-dev libxkbcommon-dev
           git submodule init
           git submodule update
       - name: Install Vulkan SDK
@@ -44,6 +45,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt update
+        sudo apt install -y libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev libwayland-dev libxkbcommon-dev
         sudo apt install -y ninja-build
         git submodule init
         git submodule update
