--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -7,6 +7,29 @@ on:
     branches: [ "master" ]
 
 jobs:
+  build-windows:
+    name: Windows 
+    runs-on: windows-latest
+  
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install dependencies
+        run: |
+          git submodule init
+          git submodule update
+      - name: Install Vulkan SDK
+        uses: humbletim/install-vulkan-sdk@v1.1.1
+        with:
+           version: 1.3.204.1
+           cache: true
+           
+      - name: Configure CMake
+        run: >
+          cmake -B build -S .
+  
+      - name: Build
+        run: cmake --build build --parallel
+        
   build-linux-make:
     name: Linux (Make)
     runs-on: ubuntu-latest
@@ -45,7 +68,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt update
-        sudo apt install -y libxinerama-dev libxcursor-dev libxi-dev libxext-dev libwayland-dev libxkbcommon-dev libvulkan-dev libglm-dev gcc-multilib g++-multilib libfreetype6-dev
+        sudo apt install -y libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev libwayland-dev libxkbcommon-dev libvulkan-dev libglm-dev gcc-multilib g++-multilib libfreetype6-dev libglu1-mesa-dev freeglut3-dev mesa-common-dev
         sudo apt install -y ninja-build
         git submodule init
         git submodule update
