--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -7,28 +7,28 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build-windows:
-    name: Windows 
-    runs-on: windows-latest
+  # build-windows:
+  #   name: Windows 
+  #   runs-on: windows-latest
   
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install dependencies
-        run: |
-          git submodule init
-          git submodule update
-      - name: Install Vulkan SDK
-        uses: humbletim/install-vulkan-sdk@v1.1.1
-        with:
-           version: 1.3.204.1
-           cache: true
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Install dependencies
+  #       run: |
+  #         git submodule init
+  #         git submodule update
+  #     - name: Install Vulkan SDK
+  #       uses: humbletim/install-vulkan-sdk@v1.1.1
+  #       with:
+  #          version: 1.3.204.1
+  #          cache: true
            
-      - name: Configure CMake
-        run: >
-          cmake -B build -S .
+  #     - name: Configure CMake
+  #       run: >
+  #         cmake -B build -S .
   
-      - name: Build
-        run: cmake --build build --parallel
+  #     - name: Build
+  #       run: cmake --build build --parallel
         
   build-linux-make:
     name: Linux (Make)
