--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Chronos)
 set(CMAKE_CXX_STANDARD 20)
 # set(CMAKE_BUILD_TYPE Debug)
 
-set(GLFW_USE_WAYLAND ON)
+set(GLFW_BUILD_WAYLAND ON)
 set(X11_X11_LIB who_cares)
 set(GLFW_BUILD_EXAMPLES OFF)
 set(GLFW_BUILD_TESTS OFF)
