Added polytri library for polygon triangulation. Writing the polygon manager to render n sided polygon. Also minor changes to editor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,10 @@ set(GLFW_VULKAN_STATIC ON)
 add_subdirectory(ThirdParty/glfw)
 set(GLFW_DIR ThirdParty/glfw/include)
 
+#polytri
+add_subdirectory(ThirdParty/polytri)
+set(POLYTRI_DIR ThirdParty/polytri/src)
+
 #vulkan sdk if using windows
 if (WIN32)
     set(VULKAN_SDK_DIR $ENV{VULKAN_SDK})        
@@ -54,6 +58,7 @@ function(IncludeDirectories projectName)
     target_include_directories(${projectName} PUBLIC include)
     target_include_directories(${projectName} PUBLIC ${FONTS_DIR})
     target_include_directories(${projectName} PUBLIC ${GLFW_DIR})  
+    target_include_directories(${projectName} PUBLIC ${POLYTRI_DIR})
     
     if(WIN32)
         target_link_libraries(${projectName} vulkan-1) 
@@ -62,6 +67,7 @@ function(IncludeDirectories projectName)
         target_link_libraries(${projectName} vulkan)   
     endif(UNIX)
     target_link_libraries(${projectName} glfw)
+    target_link_libraries(${projectName} polytri)
 
 endfunction()
 
