--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -73,6 +73,7 @@ jobs:
       run: |
         sudo apt update
         sudo apt install -y libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev libwayland-dev libxkbcommon-dev libvulkan-dev libglm-dev gcc-multilib g++-multilib libfreetype6-dev libglu1-mesa-dev freeglut3-dev mesa-common-dev
+        sudo apt install -y ninja-build
         git submodule init
         git submodule update
     - name: Install Vulkan SDK
