need to debug this, however cant do it on PC, switching to laptop

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,6 +13,6 @@
 [submodule "ThirdParty/imgui"]
 	path = ThirdParty/imgui
 	url = https://github.com/RahulVadhyar/imgui
-[submodule "ThirdParty/polytri"]
-	path = ThirdParty/polytri
-	url = https://github.com/RahulVadhyar/polytri.git
+[submodule "ThirdParty/earcut.hpp"]
+	path = ThirdParty/earcut.hpp
+	url = https://github.com/mapbox/earcut.hpp
