Add support for changnging chronos version and project name and version in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.13)
-project(Chronos)
+project(Chronos VERSION 0.0.0)
 set(CMAKE_CXX_STANDARD 20)
 # set(CMAKE_BUILD_TYPE Debug)
 
@@ -81,6 +81,13 @@ endif(WIN32)
 if(CHRONOS_ENABLE_VULKAN_VALIDATION_LAYERS)
 target_compile_definitions(Chronos PUBLIC ENABLE_VULKAN_VALIDATION_LAYERS)
 endif()
+target_compile_definitions(Chronos PUBLIC GAME_NAME="${PROJECT_NAME}")
+target_compile_definitions(Chronos PUBLIC GAME_VERSION_MAJOR=${PROJECT_VERSION_MAJOR})
+target_compile_definitions(Chronos PUBLIC GAME_VERSION_MINOR=${PROJECT_VERSION_MINOR})
+target_compile_definitions(Chronos PUBLIC GAME_VERSION_PATCH=${PROJECT_VERSION_PATCH})
+target_compile_definitions(Chronos PUBLIC CHRONOS_VERSION_MAJOR=${PROJECT_VERSION_MAJOR})
+target_compile_definitions(Chronos PUBLIC CHRONOS_VERSION_MINOR=${PROJECT_VERSION_MINOR})
+target_compile_definitions(Chronos PUBLIC CHRONOS_VERSION_PATCH=${PROJECT_VERSION_PATCH})
 
 #editor executable
 if(CHRONOS_BUILD_EDITOR)
@@ -116,6 +123,14 @@ target_compile_definitions(ChronosEditor PUBLIC ENABLE_EDITOR)
 if(CHRONOS_ENABLE_VULKAN_VALIDATION_LAYERS)
 target_compile_definitions(ChronosEditor PUBLIC ENABLE_VULKAN_VALIDATION_LAYERS)
 endif()
+
+target_compile_definitions(ChronosEditor PUBLIC GAME_NAME="ChronosEditor")
+target_compile_definitions(ChronosEditor PUBLIC GAME_VERSION_MAJOR=${PROJECT_VERSION_MAJOR})
+target_compile_definitions(ChronosEditor PUBLIC GAME_VERSION_MINOR=${PROJECT_VERSION_MINOR})
+target_compile_definitions(ChronosEditor PUBLIC GAME_VERSION_PATCH=${PROJECT_VERSION_PATCH})
+target_compile_definitions(ChronosEditor PUBLIC CHRONOS_VERSION_MAJOR=${PROJECT_VERSION_MAJOR})
+target_compile_definitions(ChronosEditor PUBLIC CHRONOS_VERSION_MINOR=${PROJECT_VERSION_MINOR})
+target_compile_definitions(ChronosEditor PUBLIC CHRONOS_VERSION_PATCH=${PROJECT_VERSION_PATCH})
 
 #header files
 target_include_directories(ChronosEditor PUBLIC Source/Editor/Headers)
@@ -161,6 +176,14 @@ IncludeDirectories(ChronosTests)
 if(CHRONOS_ENABLE_VULKAN_VALIDATION_LAYERS)
 target_compile_definitions(ChronosTests PUBLIC ENABLE_VULKAN_VALIDATION_LAYERS)
 endif()
+
+target_compile_definitions(ChronosTests PUBLIC GAME_NAME="ChronosTests")
+target_compile_definitions(ChronosTests PUBLIC GAME_VERSION_MAJOR=${PROJECT_VERSION_MAJOR})
+target_compile_definitions(ChronosTests PUBLIC GAME_VERSION_MINOR=${PROJECT_VERSION_MINOR})
+target_compile_definitions(ChronosTests PUBLIC GAME_VERSION_PATCH=${PROJECT_VERSION_PATCH})
+target_compile_definitions(ChronosTests PUBLIC CHRONOS_VERSION_MAJOR=${PROJECT_VERSION_MAJOR})
+target_compile_definitions(ChronosTests PUBLIC CHRONOS_VERSION_MINOR=${PROJECT_VERSION_MINOR})
+target_compile_definitions(ChronosTests PUBLIC CHRONOS_VERSION_PATCH=${PROJECT_VERSION_PATCH})
 
 include(GoogleTest)
 gtest_discover_tests(ChronosTests)
