experimental logging support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,20 @@ set(CMAKE_CXX_STANDARD 20)
 if(UNIX)
 option(CHRONOS_SUPPORT_WAYLAND "Build with Wayland support" ON)
 endif()
-
 option(CHRONOS_BUILD_TESTS "Build the tests" OFF)
 option(CHRONOS_BUILD_EDITOR "Build the editor" ON)
 option(CHRONOS_ENABLE_VULKAN_VALIDATION_LAYERS "Enable Vulkan validation layers" ON)
+option(CHRONOS_ENABLE_ERROR_LOGGING "Enable Error logging(level 1)" OFF)
+option(CHRONOS_ENABLE_BASIC_LOGGING "Enable Basic logging(level 2)" OFF)
+option(CHRONOS_ENABLE_VERBOSE_LOGGING "Enable Verbose logging(level 3)" OFF)
+option(CHRONOS_ENABLE_EXTREME_LOGGING "Enable Extreme logging(level 4)" OFF)
 
 if(CHRONOS_SUPPORT_WAYLAND)
 set(GLFW_BUILD_WAYLAND ON)
+message("Building with Wayland support")
+else()
+set(GLFW_BUILD_WAYLAND OFF)
+message("Building without Wayland support")
 endif()
 set(X11_X11_LIB who_cares)
 set(GLFW_BUILD_EXAMPLES OFF)
@@ -76,21 +83,44 @@ IncludeDirectories(${PROJECT_NAME})
 if(WIN32)
     target_include_directories(${PROJECT_NAME} PUBLIC ${VULKAN_SDK_INCLUDE})    
     target_link_directories(${CMAKE_PROJECT_NAME} PUBLIC ${VULKAN_SDK_LIB}) 
+    message("Vulkan SDK include found: ${VULKAN_SDK_INCLUDE}")
 endif(WIN32) 
 
 if(CHRONOS_ENABLE_VULKAN_VALIDATION_LAYERS)
 target_compile_definitions(Chronos PUBLIC ENABLE_VULKAN_VALIDATION_LAYERS)
+message("Vulkan validation layers enabled")
 endif()
 target_compile_definitions(Chronos PUBLIC GAME_NAME="${PROJECT_NAME}")
+message("Game name: ${PROJECT_NAME}")
 target_compile_definitions(Chronos PUBLIC GAME_VERSION_MAJOR=${PROJECT_VERSION_MAJOR})
 target_compile_definitions(Chronos PUBLIC GAME_VERSION_MINOR=${PROJECT_VERSION_MINOR})
 target_compile_definitions(Chronos PUBLIC GAME_VERSION_PATCH=${PROJECT_VERSION_PATCH})
+message("Game version: ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")
 target_compile_definitions(Chronos PUBLIC CHRONOS_VERSION_MAJOR=${PROJECT_VERSION_MAJOR})
 target_compile_definitions(Chronos PUBLIC CHRONOS_VERSION_MINOR=${PROJECT_VERSION_MINOR})
 target_compile_definitions(Chronos PUBLIC CHRONOS_VERSION_PATCH=${PROJECT_VERSION_PATCH})
+message("Chronos version: ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")
+if(CHRONOS_ENABLE_EXTREME_LOGGING)
+target_compile_definitions(Chronos PUBLIC CHRONOS_ENABLE_LOGGING=4)
+message("Extreme logging enabled(level 4)")
+elseif(CHRONOS_ENABLE_VERBOSE_LOGGING)
+target_compile_definitions(Chronos PUBLIC CHRONOS_ENABLE_LOGGING=3)
+message("Verbose logging enabled(level 3)")
+elseif(CHRONOS_ENABLE_BASIC_LOGGING)
+target_compile_definitions(Chronos PUBLIC CHRONOS_ENABLE_LOGGING=2)
+message("Basic logging enabled(level 2)")
+elseif(CHRONOS_ENABLE_ERROR_LOGGING)
+target_compile_definitions(Chronos PUBLIC CHRONOS_ENABLE_LOGGING=1)
+message("Error logging enabled(level 1)")
+else()
+target_compile_definitions(Chronos PUBLIC CHRONOS_ENABLE_LOGGING=0)
+message("Logging disabled(level 0)")
+endif()
+
 
 #editor executable
 if(CHRONOS_BUILD_EDITOR)
+message("Building editor")
 set(EDITOR_DIR Source/Editor/Source)
 set(IMGUI_DIR ThirdParty/imgui) 
 set(IMGUI_BACKENDS ${IMGUI_DIR}/backends)
@@ -116,21 +146,44 @@ add_executable(ChronosEditor ${CHRONOS_CPP} ${EDITOR_FILES})
 if(WIN32)
     target_include_directories(ChronosEditor PUBLIC ${VULKAN_SDK_INCLUDE})     
     target_link_directories(ChronosEditor PUBLIC ${VULKAN_SDK_LIB})
+    message("Vulkan SDK include found: ${VULKAN_SDK_INCLUDE}")
 endif(WIN32) 
 
 target_compile_definitions(ChronosEditor PUBLIC ENABLE_EDITOR)
 
 if(CHRONOS_ENABLE_VULKAN_VALIDATION_LAYERS)
 target_compile_definitions(ChronosEditor PUBLIC ENABLE_VULKAN_VALIDATION_LAYERS)
+message("Vulkan validation layers enabled")
 endif()
 
 target_compile_definitions(ChronosEditor PUBLIC GAME_NAME="ChronosEditor")
+message("Game name: ChronosEditor")
 target_compile_definitions(ChronosEditor PUBLIC GAME_VERSION_MAJOR=${PROJECT_VERSION_MAJOR})
 target_compile_definitions(ChronosEditor PUBLIC GAME_VERSION_MINOR=${PROJECT_VERSION_MINOR})
 target_compile_definitions(ChronosEditor PUBLIC GAME_VERSION_PATCH=${PROJECT_VERSION_PATCH})
+message("Game version: ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")
 target_compile_definitions(ChronosEditor PUBLIC CHRONOS_VERSION_MAJOR=${PROJECT_VERSION_MAJOR})
 target_compile_definitions(ChronosEditor PUBLIC CHRONOS_VERSION_MINOR=${PROJECT_VERSION_MINOR})
 target_compile_definitions(ChronosEditor PUBLIC CHRONOS_VERSION_PATCH=${PROJECT_VERSION_PATCH})
+message("Chronos version: ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")
+
+if(CHRONOS_ENABLE_EXTREME_LOGGING)
+target_compile_definitions(ChronosEditor PUBLIC CHRONOS_ENABLE_LOGGING=4)
+message("Extreme logging enabled (level 4)")
+elseif(CHRONOS_ENABLE_VERBOSE_LOGGING)
+target_compile_definitions(ChronosEditor PUBLIC CHRONOS_ENABLE_LOGGING=3)
+message("Verbose logging enabled (level 3)")
+elseif(CHRONOS_ENABLE_BASIC_LOGGING)
+target_compile_definitions(ChronosEditor PUBLIC CHRONOS_ENABLE_LOGGING=2)
+message("Basic logging enabled (level 2)")
+elseif(CHRONOS_ENABLE_ERROR_LOGGING)
+target_compile_definitions(ChronosEditor PUBLIC CHRONOS_ENABLE_LOGGING=1)
+message("Error logging enabled (level 1)")
+else()
+target_compile_definitions(ChronosEditor PUBLIC CHRONOS_ENABLE_LOGGING=0)
+message("Logging disabled (level 0)")
+endif()
+    
 
 #header files
 target_include_directories(ChronosEditor PUBLIC Source/Editor/Headers)
@@ -143,6 +196,7 @@ endif()
 
 #testing time...
 if(CHRONOS_BUILD_TESTS)
+message("Building tests")
 #fetch the test files
 file(GLOB ENGINE_TESTS 
 Source/Engine/Tests/*.cpp)
@@ -175,6 +229,7 @@ IncludeDirectories(ChronosTests)
 
 if(CHRONOS_ENABLE_VULKAN_VALIDATION_LAYERS)
 target_compile_definitions(ChronosTests PUBLIC ENABLE_VULKAN_VALIDATION_LAYERS)
+message("Vulkan validation layers enabled")
 endif()
 
 target_compile_definitions(ChronosTests PUBLIC GAME_NAME="ChronosTests")
@@ -184,6 +239,24 @@ target_compile_definitions(ChronosTests PUBLIC GAME_VERSION_PATCH=${PROJECT_VERS
 target_compile_definitions(ChronosTests PUBLIC CHRONOS_VERSION_MAJOR=${PROJECT_VERSION_MAJOR})
 target_compile_definitions(ChronosTests PUBLIC CHRONOS_VERSION_MINOR=${PROJECT_VERSION_MINOR})
 target_compile_definitions(ChronosTests PUBLIC CHRONOS_VERSION_PATCH=${PROJECT_VERSION_PATCH})
+
+if(CHRONOS_ENABLE_EXTREME_LOGGING)
+target_compile_definitions(ChronosTests PUBLIC CHRONOS_ENABLE_LOGGING=4)
+message("Extreme logging enabled (level 4)")
+elseif(CHRONOS_ENABLE_VERBOSE_LOGGING)
+target_compile_definitions(ChronosTests PUBLIC CHRONOS_ENABLE_LOGGING=3)
+message("Verbose logging enabled (level 3)")
+elseif(CHRONOS_ENABLE_BASIC_LOGGING)
+target_compile_definitions(ChronosTests PUBLIC CHRONOS_ENABLE_LOGGING=2)
+message("Basic logging enabled (level 2)")
+elseif(CHRONOS_ENABLE_ERROR_LOGGING)
+target_compile_definitions(ChronosTests PUBLIC CHRONOS_ENABLE_LOGGING=1)
+message("Error logging enabled (level 1)")
+else()
+target_compile_definitions(ChronosTests PUBLIC CHRONOS_ENABLE_LOGGING=0)
+message("Logging disabled (level 0)")
+endif()
+
 
 include(GoogleTest)
 gtest_discover_tests(ChronosTests)
